advanced on css by fixing header layout so it is aligned properly

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,11 +23,14 @@ form {
 .headerWrap {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+
   margin: 2.5rem;
   align-self: center;
   font-size: .6em;
+  width: 100%;
+}
+.welcomeMsgWrap {
+  width: 80%;
 }
 .newMsgBtn {
   font: bold 11px Arial;
